--- a/Wooder/css/style.css
+++ b/Wooder/css/style.css
@@ -725,6 +725,130 @@ h6 {
   opacity: 1;
 }
 
+.services .container .services_inner .services__block {
+  width: 100%;
+}
+
+.block .block_inner .block__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.block .block_inner .block__content .content__lines {
+  margin-right: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.block .block_inner .block__content .content__lines .content__lines-title {
+  content: "";
+  height: 1px;
+  width: 150px;
+  display: block;
+  background-color: #000;
+  margin-top: 20px;
+}
+
+.block .block_inner .block__content .content__lines .content__lines-subscribe {
+  content: "";
+  height: 2px;
+  width: 45px;
+  display: block;
+  background-color: #bea67c;
+  margin-top: 57px;
+}
+
+.block .block_inner .block__content .content__text {
+  max-width: 340px;
+}
+
+.block .block_inner .block__content .content__text .content__title {
+  font-family: "ProximaNova-Bold";
+  font-size: 3.2rem;
+  letter-spacing: .5rem;
+  text-transform: uppercase;
+}
+
+.block .block_inner .block__content .content__text .content__subscribe {
+  padding: 20px 0 0 0;
+  line-height: 1.66rem;
+}
+
+.block .block_inner .block__content .content__text .content__link {
+  padding: 30px 0 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.block .block_inner .block__content .content__text .content__link .content__link-name {
+  font-family: "ProximaNova-Bold";
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  letter-spacing: .33rem;
+  color: #000;
+  margin-right: 10px;
+  margin-top: 2px;
+}
+
+.block .block_inner .block__content .content__text .content__link .content__link-name::after {
+  content: "";
+  height: 2px;
+  width: 45px;
+  display: block;
+  background-color: #bea67c;
+  margin-top: 10px;
+}
+
+.block .block_inner .block__content .content__text .content__link .content__link-icon {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+.block .block_inner .block__content .content__text .content__link .content__link-icon::before {
+  content: "";
+  height: 1px;
+  width: 35px;
+  display: block;
+  background-color: #bea67c;
+  -webkit-transform: translate3d(7px, 7.5px, 0);
+          transform: translate3d(7px, 7.5px, 0);
+}
+
+.block .block_inner .block__content .content__text .content__link .content__link-icon .icon {
+  height: 10px;
+  fill: #bea67c;
+  margin-left: 15px;
+}
+
+.block:hover .content__link-icon .icon {
+  -webkit-transform: translateX(25px);
+      -ms-transform: translateX(25px);
+          transform: translateX(25px);
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.block:hover .block_inner .block__content .content__text .content__link .content__link-icon::before {
+  width: 60px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
 body,
 html {
   font-family: 'ProximaNova-Regular';
@@ -739,6 +863,13 @@ html {
 
 .hidden {
   display: none;
+}
+
+.container {
+  max-width: 1230px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 @media (max-width: 1240px) {
