--- a/Wooder/css/style.css
+++ b/Wooder/css/style.css
@@ -666,6 +666,7 @@ h6 {
   position: fixed;
   top: 35%;
   left: calc(50% - 38%);
+  z-index: 10;
 }
 
 .sidebar .sidebar_inner .sidebar__current {
@@ -725,18 +726,111 @@ h6 {
   opacity: 1;
 }
 
-.services .container .services_inner .services__block {
+.services {
   width: 100%;
 }
 
-.block .block_inner .block__content {
+.services-block {
+  padding: 130px 0;
+  position: relative;
+}
+
+.services-block__f {
+  font-family: "ProximaNova-Bold";
+  font-size: 26.3rem;
+  color: #bea67c;
+  opacity: .1;
+  text-transform: uppercase;
+  position: absolute;
+  top: -160px;
+  left: calc(50% - 630px);
+}
+
+.services-block__f_reverse {
+  left: calc(50% + 390px);
+}
+
+.services-block__number {
+  font-family: "ProximaNova-Bold";
+  font-size: 3rem;
+  color: #000;
+  letter-spacing: 0.3rem;
+  position: absolute;
+  bottom: 60px;
+  left: calc(50% - 610px);
+}
+
+.services-block__number:after {
+  content: '';
+  display: block;
+  width: 4px;
+  height: 50px;
+  background-color: #bea67c;
+  -webkit-transform: translate3d(20px, 100px, 0);
+          transform: translate3d(20px, 100px, 0);
+}
+
+.services-block__number_reverse {
+  left: calc(50% + 570px);
+}
+
+.services-block__wrapper {
+  overflow: hidden;
+}
+
+.services-block__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.services-block__inner_reverse {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.services-block:hover .icon {
+  -webkit-transform: translateX(25px);
+      -ms-transform: translateX(25px);
+          transform: translateX(25px);
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.services-block:hover .block-link__icon::before {
+  width: 60px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.dot {
+  color: #bea67c;
+}
+
+.block-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.block .block_inner .block__content .content__lines {
-  margin-right: 30px;
+.block-content_reverse {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.block-lines {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -747,9 +841,18 @@ h6 {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
+  margin-right: 30px;
 }
 
-.block .block_inner .block__content .content__lines .content__lines-title {
+.block-lines_reverse {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-right: 0;
+  margin-left: 30px;
+}
+
+.block-lines__title {
   content: "";
   height: 1px;
   width: 150px;
@@ -758,7 +861,7 @@ h6 {
   margin-top: 20px;
 }
 
-.block .block_inner .block__content .content__lines .content__lines-subscribe {
+.block-lines__subscribe {
   content: "";
   height: 2px;
   width: 45px;
@@ -767,23 +870,40 @@ h6 {
   margin-top: 57px;
 }
 
-.block .block_inner .block__content .content__text {
+.block-text {
   max-width: 340px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
-.block .block_inner .block__content .content__text .content__title {
+.block-text_reverse {
+  text-align: right;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.block-text__title {
   font-family: "ProximaNova-Bold";
   font-size: 3.2rem;
   letter-spacing: .5rem;
   text-transform: uppercase;
 }
 
-.block .block_inner .block__content .content__text .content__subscribe {
+.block-text__subscribe {
   padding: 20px 0 0 0;
   line-height: 1.66rem;
 }
 
-.block .block_inner .block__content .content__text .content__link {
+.block-link {
   padding: 30px 0 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -793,7 +913,7 @@ h6 {
           align-items: center;
 }
 
-.block .block_inner .block__content .content__text .content__link .content__link-name {
+.block-link__name {
   font-family: "ProximaNova-Bold";
   font-size: 0.9rem;
   text-transform: uppercase;
@@ -803,7 +923,7 @@ h6 {
   margin-top: 2px;
 }
 
-.block .block_inner .block__content .content__text .content__link .content__link-name::after {
+.block-link__name::after {
   content: "";
   height: 2px;
   width: 45px;
@@ -812,12 +932,12 @@ h6 {
   margin-top: 10px;
 }
 
-.block .block_inner .block__content .content__text .content__link .content__link-icon {
+.block-link__icon {
   -ms-flex-item-align: start;
       align-self: flex-start;
 }
 
-.block .block_inner .block__content .content__text .content__link .content__link-icon::before {
+.block-link__icon::before {
   content: "";
   height: 1px;
   width: 35px;
@@ -827,26 +947,51 @@ h6 {
           transform: translate3d(7px, 7.5px, 0);
 }
 
-.block .block_inner .block__content .content__text .content__link .content__link-icon .icon {
+.block-link__icon .icon {
   height: 10px;
   fill: #bea67c;
   margin-left: 15px;
 }
 
-.block:hover .content__link-icon .icon {
-  -webkit-transform: translateX(25px);
-      -ms-transform: translateX(25px);
-          transform: translateX(25px);
-  -webkit-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+.block-image {
+  position: relative;
+  width: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
-.block:hover .block_inner .block__content .content__text .content__link .content__link-icon::before {
-  width: 60px;
-  -webkit-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+.block-image_reverse {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.block-image__img {
+  max-width: 100%;
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.68);
+  -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.68);
+  -moz-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.68);
+}
+
+.block-image__overlay {
+  font-family: "ProximaNova-Bold";
+  text-transform: uppercase;
+  font-size: 11.26rem;
+  letter-spacing: 1.8rem;
+  color: #bea67c;
+  position: absolute;
+  top: calc(50% - 70px);
+  left: 250px;
+  opacity: .2;
+  z-index: 2;
+}
+
+.block-image__overlay_reverse {
+  left: -300px;
 }
 
 body,
