--- a/#src/scss/services.scss
+++ b/#src/scss/services.scss
@@ -1,194 +1,305 @@
 .services {
-    width: 100%;
+	width: 100%;
+	padding-top: 260px;
+	margin-right: 30px;
+	margin-top: -130px;
+	overflow: hidden;
 }
 .services-block {
-    padding: 130px 0;
-    position: relative;
-    &__f {
-        font-family: $font-ProximaBold;
-        font-size: 26.3rem;
-        color: $color-brown;
-        opacity: .1;
-        text-transform: uppercase;
-        position: absolute;
-        top: -160px;
-        left:calc(50% - 630px);
-        &_reverse{
-            left: calc(50% + 390px);
-        }
-    }
-    
-    &__number {
-        font-family: $font-ProximaBold;
-        font-size: 3rem;
-        color: $color-black;
-        letter-spacing: 0.3rem;
-        position: absolute;
-        bottom: 60px;
-        left:calc(50% - 610px);
-        &:after{
-            content: '';
-            display: block;
-            width: 4px;
-            height: 50px;
-            background-color: $color-brown;
-            transform: translate3d(20px, 100px, 0);
-        }
-        &_reverse{
-            left:calc(50% + 570px);   
-        }
-    }
+	padding: 0 0 260px 0;
+	position: relative;
+	@media (max-width: 1040px) {
+		padding: 0 0 100px 0;
+	}
+	&__f {
+		font-family: $font-ProximaBold;
+		font-size: 26.3rem;
+		color: $color-brown;
+		opacity: 0.1;
+		text-transform: uppercase;
+		position: absolute;
+		top: -300px;
+		left: calc(50% - 630px);
+		@media (max-width: 1040px) {
+			left: 100px;
+			top: -150px;
+		}
+		@media (max-width: 768px) {
+			left: 200px;
+			top: -120px;
+		}
+		&_reverse {
+			left: calc(50% + 390px);
+			@media (max-width: 1040px) {
+				left: calc(100% - 400px);
+				top: -130px;
+			}
+			@media (max-width: 768px) {
+				left: calc(100% - 400px);
+				top: -130px;
+			}
+		}
+	}
 
-    &__wrapper {
-        overflow: hidden;
-    }
+	&__number {
+		font-family: $font-ProximaBold;
+		font-size: 3rem;
+		color: $color-black;
+		letter-spacing: 0.3rem;
+		position: absolute;
+		bottom: 200px;
+		left: calc(50% - 495px);
+		@media (max-width: 1539px) {
+			left: 280px;
+		}
+		@media (max-width: 1220px) {
+			left: 180px;
+			bottom: 150px;
+		}
+		@media (max-width: 1040px) {
+			bottom: -50px;
+		}
+		@media (max-width: 768px) {
+			left: 20px;
+			bottom: -20px;
+		}
+		@media (max-width: 440px) {
+			display: none;
+		}
+		&:after {
+			content: '';
+			display: block;
+			width: 4px;
+			height: 50px;
+			background-color: $color-brown;
+			transform: translate3d(20px, 100px, 0);
+			@media (max-width: 1220px) {
+				transform: translate3d(20px, 50px, 0);
+			}
+			@media (max-width: 440px) {
+				display: none;
+			}
+		}
+		&_reverse {
+			left: calc(50% + 680px);
+			@media (max-width: 1539px) {
+				left: calc(100% - 100px);
+			}
+			@media (max-width: 1220px) {
+				left: calc(100% - 100px);
+			}
+			@media (max-width: 768px) {
+				left: calc(100% - 100px);
+				bottom: -20px;
+			}
+		}
+	}
 
-    &__inner {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    &__inner_reverse{
-        flex-direction: row-reverse;
-    }
+	&__wrapper {
+		overflow: hidden;
+		@media (max-width: 1120px) {
+			overflow: visible;
+		}
+	}
 
-    // hover
-    &:hover .icon{
-        transform: translateX(25px);
-        transition: all 0.2s ease-in-out;
-    }
-    &:hover .block-link__icon::before{
-        width: 60px;
-        transition: all 0.2s ease-in-out;
-    }
+	&__inner {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		@media (max-width: 1040px) {
+			flex-direction: column;
+		}
+	}
+
+	&__inner_reverse {
+		flex-direction: row-reverse;
+	}
+
+	// hover
+	&:hover .icon {
+		transform: translateX(25px);
+		transition: all 0.2s ease-in-out;
+	}
+	&:hover .block-link__icon::before {
+		width: 60px;
+		transition: all 0.2s ease-in-out;
+	}
 }
 .dot {
-    color: $color-brown;
+	color: $color-brown;
 }
 .block-content {
-    display: flex;
-     &_reverse{
-        flex-direction: row-reverse;
-     }
+	width: 40%;
+	display: flex;
+	@media (max-width: 1440px) {
+		width: 50%;
+	}
+	@media (max-width: 1040px) {
+		width: 100%;
+	}
+	@media (max-width: 1040px) {
+		margin-bottom: 50px;
+	}
+	&_reverse {
+		flex-direction: row-reverse;
+	}
 }
 .block-lines {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin-right: 30px;
-    &_reverse{
-        align-items: flex-start;
-        margin-right: 0;
-        margin-left: 30px;
-    }
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	margin-right: 30px;
+	@media (max-width: 1120px) {
+		display: none;
+	}
+	&_reverse {
+		align-items: flex-start;
+		margin-right: 0;
+		margin-left: 30px;
+	}
 
-    &__title {
-        content: "";
-        height: 1px;
-        width: 150px;
-        display: block;
-        background-color:$color-black;
-        margin-top: 20px;
-    }
+	&__title {
+		content: '';
+		height: 1px;
+		width: 150px;
+		display: block;
+		background-color: $color-black;
+		margin-top: 20px;
+		@media (max-width: 1565px) {
+			width: 75px;
+		}
+	}
 
-    &__subscribe {
-        content: "";
-        height: 2px;
-        width: 45px;
-        display: block;
-        background-color:$color-brown;
-        margin-top: 57px;
-    }
+	&__subscribe {
+		content: '';
+		height: 2px;
+		width: 45px;
+		display: block;
+		background-color: $color-brown;
+		margin-top: 57px;
+		@media (max-width: 1565px) {
+			width: 35px;
+		}
+	}
 }
 .block-text {
-    max-width: 340px;
-    display: flex;
-    flex-direction: column;
-    align-items:flex-start;
-    &_reverse{
-        text-align: right;
-        align-items:flex-end;
+	max-width: 340px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	&_reverse {
+		text-align: right;
+		align-items: flex-end;
+	}
+	&__title {
+		font-family: $font-ProximaBold;
+		font-size: 3.2rem;
+		letter-spacing: 0.5rem;
+		text-transform: uppercase;
+	}
 
-    }
-    &__title {
-        font-family: $font-ProximaBold;
-        font-size: 3.2rem;
-        letter-spacing: .5rem;
-        text-transform: uppercase;
-    }
-
-    &__subscribe {
-        padding: 20px 0 0 0;
-        line-height: 1.66rem;
-    }
+	&__subscribe {
+		padding: 20px 0 0 0;
+		line-height: 1.66rem;
+	}
 }
 .block-link {
-    padding: 30px 0 0 0;
-    display: flex;
-    align-items: center;
-    &__name {
-        font-family: $font-ProximaBold;
-        font-size: 0.9rem;
-        text-transform: uppercase;
-        letter-spacing: .33rem;
-        color: $color-black;
-        margin-right: 10px;
-        margin-top: 2px;
-        &::after{
-            content: "";
-            height: 2px;
-            width: 45px;
-            display: block;
-            background-color:$color-brown;
-            margin-top: 10px; 
-        }
-    }
+	padding: 30px 0 0 0;
+	display: flex;
+	align-items: center;
+	cursor: pointer;
+	&__name {
+		font-family: $font-ProximaBold;
+		font-size: 0.9rem;
+		text-transform: uppercase;
+		letter-spacing: 0.33rem;
+		color: $color-black;
+		margin-right: 10px;
+		margin-top: 2px;
+		&::after {
+			content: '';
+			height: 2px;
+			width: 45px;
+			display: block;
+			background-color: $color-brown;
+			margin-top: 10px;
+		}
+	}
 
-    &__icon {
-    align-self:flex-start;   
-    &::before{
-        content: "";
-        height: 1px;
-        width: 35px;
-        display: block;
-        background-color:$color-brown; 
-        transform: translate3d(7px, 7.5px, 0);   
-        }
-        .icon{
-            height: 10px;
-            fill: $color-brown;
-            margin-left: 15px;
-        }
-    }
+	&__icon {
+		align-self: flex-start;
+		&::before {
+			content: '';
+			height: 1px;
+			width: 35px;
+			display: block;
+			background-color: $color-brown;
+			transform: translate3d(7px, 7.5px, 0);
+		}
+		.icon {
+			height: 10px;
+			fill: $color-brown;
+			margin-left: 15px;
+		}
+	}
 }
 .block-image {
-    position: relative;
-    width: 60%;
-    display: flex;
-    justify-content: flex-end;
-    &_reverse{
-        justify-content: flex-start;
-    }
-    &__img {
-        max-width: 100%;
-        box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.68);
-        -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.68);
-        -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.68); 
-    }
+	position: relative;
+	width: 60%;
+	display: flex;
+	justify-content: flex-end;
+	@media (max-width: 1440px) {
+		width: 50%;
+	}
+	@media (max-width: 1040px) {
+		width: 100%;
+	}
+	&_reverse {
+		justify-content: flex-start;
+	}
+	&__img {
+		max-width: 612px;
+		height: auto;
+		box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.68);
+		-webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.68);
+		-moz-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.68);
+		@media (max-width: 1440px) {
+			width: 516px;
+		}
+		@media (max-width: 1320px) {
+			width: 416px;
+		}
+		@media (max-width: 1040px) {
+			width: 100%;
+		}
+	}
 
-    &__overlay {
-        font-family: $font-ProximaBold;
-        text-transform: uppercase;
-        font-size: 11.26rem;
-        letter-spacing: 1.8rem;
-        color:$color-brown;
-        position: absolute;
-        top:calc(50% - 70px);
-        left:250px;
-        opacity: .2;
-        z-index: 2;
-        &_reverse{
-            left:-300px;
-        }
-    }
+	&__overlay {
+		font-family: $font-ProximaBold;
+		text-transform: uppercase;
+		font-size: 11.26rem;
+		letter-spacing: 1.8rem;
+		color: $color-brown;
+		position: absolute;
+		top: calc(50% - 70px);
+		left: 250px;
+		opacity: 0.2;
+		z-index: 2;
+		@media (max-width: 1120px) {
+			font-size: 8rem;
+			top: 350px;
+			left: -600px;
+		}
+		@media (max-width: 1040px) {
+			display: none;
+		}
+		&_reverse {
+			left: -300px;
+			@media (max-width: 1120px) {
+				font-size: 8rem;
+				top: 350px;
+				left: 400px;
+			}
+		}
+	}
 }
