--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -37,3 +37,15 @@ html {
 	margin: 0 auto;
 	padding: 0 15px;
 }
+.container-right{
+	max-width: 1550px;
+	width: 100%;
+	margin: 0 auto;
+	padding: 0 50px 0px 300px;
+	@media (max-width: 1220px) {
+        padding: 0 50px 0px 200px;
+    }
+	@media (max-width: 768px) {
+		padding: 0 15px;
+	}
+}
