--- a/Wooder/css/style.css
+++ b/Wooder/css/style.css
@@ -665,7 +665,7 @@ h6 {
 .sidebar {
   position: fixed;
   top: 35%;
-  left: calc(50% - 38%);
+  left: calc(50% - 42%);
   z-index: 10;
 }
 
@@ -728,10 +728,14 @@ h6 {
 
 .services {
   width: 100%;
+  padding-top: 260px;
+  margin-right: 30px;
+  margin-top: -130px;
+  overflow: hidden;
 }
 
 .services-block {
-  padding: 130px 0;
+  padding: 0 0 260px 0;
   position: relative;
 }
 
@@ -739,10 +743,10 @@ h6 {
   font-family: "ProximaNova-Bold";
   font-size: 26.3rem;
   color: #bea67c;
-  opacity: .1;
+  opacity: 0.1;
   text-transform: uppercase;
   position: absolute;
-  top: -160px;
+  top: -300px;
   left: calc(50% - 630px);
 }
 
@@ -756,8 +760,8 @@ h6 {
   color: #000;
   letter-spacing: 0.3rem;
   position: absolute;
-  bottom: 60px;
-  left: calc(50% - 610px);
+  bottom: 200px;
+  left: calc(50% - 495px);
 }
 
 .services-block__number:after {
@@ -771,7 +775,7 @@ h6 {
 }
 
 .services-block__number_reverse {
-  left: calc(50% + 570px);
+  left: calc(50% + 680px);
 }
 
 .services-block__wrapper {
@@ -818,6 +822,7 @@ h6 {
 }
 
 .block-content {
+  width: 40%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -853,7 +858,7 @@ h6 {
 }
 
 .block-lines__title {
-  content: "";
+  content: '';
   height: 1px;
   width: 150px;
   display: block;
@@ -862,7 +867,7 @@ h6 {
 }
 
 .block-lines__subscribe {
-  content: "";
+  content: '';
   height: 2px;
   width: 45px;
   display: block;
@@ -894,7 +899,7 @@ h6 {
 .block-text__title {
   font-family: "ProximaNova-Bold";
   font-size: 3.2rem;
-  letter-spacing: .5rem;
+  letter-spacing: 0.5rem;
   text-transform: uppercase;
 }
 
@@ -911,20 +916,21 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  cursor: pointer;
 }
 
 .block-link__name {
   font-family: "ProximaNova-Bold";
   font-size: 0.9rem;
   text-transform: uppercase;
-  letter-spacing: .33rem;
+  letter-spacing: 0.33rem;
   color: #000;
   margin-right: 10px;
   margin-top: 2px;
 }
 
 .block-link__name::after {
-  content: "";
+  content: '';
   height: 2px;
   width: 45px;
   display: block;
@@ -938,7 +944,7 @@ h6 {
 }
 
 .block-link__icon::before {
-  content: "";
+  content: '';
   height: 1px;
   width: 35px;
   display: block;
@@ -971,7 +977,8 @@ h6 {
 }
 
 .block-image__img {
-  max-width: 100%;
+  max-width: 612px;
+  height: auto;
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.68);
   -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.68);
   -moz-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.68);
@@ -986,7 +993,7 @@ h6 {
   position: absolute;
   top: calc(50% - 70px);
   left: 250px;
-  opacity: .2;
+  opacity: 0.2;
   z-index: 2;
 }
 
@@ -1017,6 +1024,53 @@ html {
   padding: 0 15px;
 }
 
+.container-right {
+  max-width: 1550px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 50px 0px 300px;
+}
+
+@media (max-width: 1565px) {
+  .block-lines__title {
+    width: 75px;
+  }
+
+  .block-lines__subscribe {
+    width: 35px;
+  }
+}
+
+@media (max-width: 1539px) {
+  .services-block__number {
+    left: 280px;
+  }
+
+  .services-block__number_reverse {
+    left: calc(100% - 100px);
+  }
+}
+
+@media (max-width: 1440px) {
+  .block-content {
+    width: 50%;
+  }
+
+  .block-image {
+    width: 50%;
+  }
+
+  .block-image__img {
+    width: 516px;
+  }
+}
+
+@media (max-width: 1320px) {
+  .block-image__img {
+    width: 416px;
+  }
+}
+
 @media (max-width: 1240px) {
   .header .header_inner .header__navigation {
     -webkit-transform: translateX(0%);
@@ -1034,6 +1088,95 @@ html {
 
   .sidebar {
     left: 3%;
+  }
+}
+
+@media (max-width: 1220px) {
+  .services-block__number {
+    left: 180px;
+    bottom: 150px;
+  }
+
+  .services-block__number:after {
+    -webkit-transform: translate3d(20px, 50px, 0);
+            transform: translate3d(20px, 50px, 0);
+  }
+
+  .services-block__number_reverse {
+    left: calc(100% - 100px);
+  }
+
+  .container-right {
+    padding: 0 50px 0px 200px;
+  }
+}
+
+@media (max-width: 1120px) {
+  .services-block__wrapper {
+    overflow: visible;
+  }
+
+  .block-lines {
+    display: none;
+  }
+
+  .block-image__overlay {
+    font-size: 8rem;
+    top: 350px;
+    left: -600px;
+  }
+
+  .block-image__overlay_reverse {
+    font-size: 8rem;
+    top: 350px;
+    left: 400px;
+  }
+}
+
+@media (max-width: 1040px) {
+  .services-block {
+    padding: 0 0 100px 0;
+  }
+
+  .services-block__f {
+    left: 100px;
+    top: -150px;
+  }
+
+  .services-block__f_reverse {
+    left: calc(100% - 400px);
+    top: -130px;
+  }
+
+  .services-block__number {
+    bottom: -50px;
+  }
+
+  .services-block__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .block-content {
+    width: 100%;
+  }
+
+  .block-content {
+    margin-bottom: 50px;
+  }
+
+  .block-image {
+    width: 100%;
+  }
+
+  .block-image__img {
+    width: 100%;
+  }
+
+  .block-image__overlay {
+    display: none;
   }
 }
 
@@ -1086,7 +1229,7 @@ html {
   }
 
   .sidebar {
-    left: 0%;
+    display: none;
   }
 
   .sidebar .sidebar_inner .sidebar__current {
@@ -1103,14 +1246,34 @@ html {
   .sidebar .sidebar_inner .sidebar__controls {
     margin-top: 20px;
   }
+
+  .services-block__f {
+    left: 200px;
+    top: -120px;
+  }
+
+  .services-block__f_reverse {
+    left: calc(100% - 400px);
+    top: -130px;
+  }
+
+  .services-block__number {
+    left: 20px;
+    bottom: -20px;
+  }
+
+  .services-block__number_reverse {
+    left: calc(100% - 100px);
+    bottom: -20px;
+  }
+
+  .container-right {
+    padding: 0 15px;
+  }
 }
 
 @media (max-width: 650px) {
   .lang {
-    display: none;
-  }
-
-  .sidebar {
     display: none;
   }
 }
@@ -1137,6 +1300,16 @@ html {
 
   .link {
     padding: 10px -30px 10px 30px;
+  }
+}
+
+@media (max-width: 440px) {
+  .services-block__number {
+    display: none;
+  }
+
+  .services-block__number:after {
+    display: none;
   }
 }
 
