--- a/#src/scss/videos.scss
+++ b/#src/scss/videos.scss
@@ -62,6 +62,7 @@
     align-items: center;
     padding: 20px 10px;
     cursor: pointer;
+    position: relative;
     @media (max-width: 650px) {
         width: 100%;
     }
@@ -70,6 +71,15 @@
             width: 100%;
         }
     }
+    &_overlay {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 15;
+    }
+
 
     &__name{
         font-size: 1.08rem;
@@ -83,7 +93,9 @@
         }
     }
     &:hover .box-button {
-        background-color:rgba($color-brown, 1);
+        background-color:rgba($color-brown, .8);
+        padding: 50px;
+        transition: all .2s ease-in-out;
     }
     &:hover .videos-item__name::before {
         width: 50px;
@@ -125,3 +137,15 @@
     }
 }
 
+.videos-item_active{
+    .box-button{
+        padding: 50px;
+        transition: all .2s ease-in-out;
+        .icon{
+            height: 60px;
+            width: 60px;
+            transition: all .2s ease-in-out;
+        }   
+    }
+    
+}
