--- a/Wooder/css/style.css
+++ b/Wooder/css/style.css
@@ -1086,6 +1086,16 @@ h6 {
           align-items: center;
   padding: 20px 10px;
   cursor: pointer;
+  position: relative;
+}
+
+.videos-item_overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 15;
 }
 
 .videos-item__name {
@@ -1102,7 +1112,11 @@ h6 {
 }
 
 .videos-item:hover .box-button {
-  background-color: #bea67c;
+  background-color: rgba(190, 166, 124, 0.8);
+  padding: 50px;
+  -webkit-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
 }
 
 .videos-item:hover .videos-item__name::before {
@@ -1150,6 +1164,273 @@ h6 {
   height: auto;
 }
 
+.videos-item_active .box-button {
+  padding: 50px;
+  -webkit-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.videos-item_active .box-button .icon {
+  height: 60px;
+  width: 60px;
+  -webkit-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.video {
+  background-image: url("../img/video-back.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  padding: 80px 5%;
+  overflow: hidden;
+}
+
+.video-back .icon {
+  fill: #ffff;
+  height: 830px;
+  width: 830px;
+  position: absolute;
+  top: 30px;
+  opacity: 0.05;
+  left: 50%;
+}
+
+.video-item {
+  margin-left: -100px;
+}
+
+.video-item .video-subscribe {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 730px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.video-item .video-subscribe .video-content__title {
+  max-width: 510px;
+  font-family: "ProximaNova-Bold";
+  font-size: 3.2rem;
+  color: #bea67c;
+  text-transform: uppercase;
+  letter-spacing: 0.08rem;
+  line-height: 4rem;
+}
+
+.video-item .video-subscribe .video-content__subtitle {
+  max-width: 405px;
+  color: #ffff;
+  line-height: 1.66rem;
+  margin-top: 40px;
+}
+
+.video-item .video-subscribe .video-btn {
+  border: 2px solid #ffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 305px;
+  padding: 16px 0;
+  margin-top: 40px;
+}
+
+.video-item .video-subscribe .video-btn__icon {
+  margin-right: 15px;
+}
+
+.video-item .video-subscribe .video-btn__icon .icon {
+  width: 25px;
+  height: 25px;
+  fill: #ffff;
+}
+
+.video-item .video-subscribe .video-btn__link {
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  color: #ffff;
+  letter-spacing: 0.2rem;
+}
+
+.video-item .video-subscribe .video-btn:hover {
+  background-color: #bea67c;
+  border: 2px solid #bea67c;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.video-item .video-subscribe .video-btn:hover .video-btn__icon .icon {
+  fill: #000;
+}
+
+.video-item .video-subscribe .video-btn:hover .video-btn__link {
+  color: #000;
+}
+
+.video-item .video-lines {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin-right: 20px;
+  -webkit-transform: translateY(-95px);
+      -ms-transform: translateY(-95px);
+          transform: translateY(-95px);
+}
+
+.video-item .video-lines .block-lines__title {
+  background-color: #ffff;
+  margin-top: 30px;
+}
+
+.video-item .video-lines .block-lines__subscribe {
+  margin-top: 140px;
+}
+
+.video-item .video-watch {
+  display: none;
+  width: 100%;
+}
+
+.video-item .video-watch video {
+  width: 100%;
+}
+
+.about {
+  overflow: hidden;
+}
+
+.about__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  margin: 100px 0 120px 0;
+}
+
+.about__inner .about-back__letter {
+  text-transform: uppercase;
+  font-family: "ProximaNova-Bold";
+  font-size: 26.3rem;
+  color: #bea67c;
+  opacity: 0.2;
+  position: absolute;
+  right: -80px;
+  top: -280px;
+}
+
+.about__inner:hover .icon {
+  -webkit-transform: translateX(25px);
+      -ms-transform: translateX(25px);
+          transform: translateX(25px);
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.about__inner:hover .block-link__icon::before {
+  width: 60px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.about-img {
+  position: relative;
+}
+
+.about-img__overlay {
+  font-family: "ProximaNova-Bold";
+  text-transform: uppercase;
+  font-size: 11.26rem;
+  letter-spacing: 1.8rem;
+  color: #888887;
+  position: absolute;
+  top: calc(50% - 70px);
+  left: -500px;
+  opacity: 0.1;
+  z-index: 2;
+}
+
+.about-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  z-index: 2;
+  margin-left: -80px;
+}
+
+.about-content__lines {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin-right: 25px;
+}
+
+.footer {
+  background-image: url(../img/footer-back.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.footer__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  Align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 20px 0;
+}
+
+.footer-date {
+  color: #ffff;
+  opacity: .2;
+  text-transform: uppercase;
+}
+
+.footer-logo {
+  font-size: 2rem;
+}
+
+.footer-author {
+  color: #ffff;
+  opacity: .4;
+}
+
+.footer-author span {
+  opacity: .3;
+}
+
 body,
 html {
   font-family: 'ProximaNova-Regular';
@@ -1180,6 +1461,14 @@ html {
   padding: 0 50px 0px 300px;
 }
 
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
 @media (max-width: 1565px) {
   .block-lines__title {
     width: 75px;
@@ -1187,6 +1476,12 @@ html {
 
   .block-lines__subscribe {
     width: 35px;
+  }
+}
+
+@media (max-width: 1560px) {
+  .about-content {
+    margin-left: -50px;
   }
 }
 
@@ -1217,6 +1512,12 @@ html {
 @media (max-width: 1320px) {
   .block-image__img {
     width: 416px;
+  }
+}
+
+@media (max-width: 1300px) {
+  .about-img img {
+    width: 400px;
   }
 }
 
@@ -1280,6 +1581,15 @@ html {
     top: 350px;
     left: 400px;
   }
+
+  .video-back .icon {
+    height: 600px;
+    width: 600px;
+  }
+
+  .video-item .video-subscribe {
+    height: 500px;
+  }
 }
 
 @media (max-width: 1040px) {
@@ -1338,6 +1648,29 @@ html {
   }
 }
 
+@media (max-width: 1005px) {
+  .about__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: inherit;
+        -ms-flex-align: inherit;
+            align-items: inherit;
+  }
+
+  .about-img__overlay {
+    font-size: 9.2rem;
+    top: calc(50% - 45px);
+  }
+
+  .about-content {
+    margin: 30px 0 0 0;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+  }
+}
+
 @media (max-width: 940px) {
   .header .header_inner .header__navigation .navigation_wrapper .navigation__logo {
     margin: 0;
@@ -1365,6 +1698,12 @@ html {
 
   .link {
     padding: 15px 0px 15px 80px;
+  }
+}
+
+@media (max-width: 840px) {
+  .video-item .video-subscribe .video-content__title {
+    font-size: 2.5rem;
   }
 }
 
@@ -1425,8 +1764,35 @@ html {
     bottom: -20px;
   }
 
+  .video-item {
+    margin: 0;
+  }
+
   .container-right {
     padding: 0 15px;
+  }
+}
+
+@media (max-width: 700px) {
+  .footer-date {
+    display: none;
+  }
+
+  .footer-logo {
+    width: 100%;
+    text-align: center;
+  }
+
+  .footer-author {
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+  }
+}
+
+@media (max-width: 675px) {
+  .video-item .video-subscribe {
+    height: 400px;
   }
 }
 
@@ -1437,6 +1803,25 @@ html {
 
   .videos-item {
     width: 100%;
+  }
+
+  .video-item .video-subscribe .video-content {
+    text-align: center;
+    margin-bottom: 100px;
+  }
+
+  .video-item .video-subscribe .video-content__subtitle {
+    text-align: center;
+    max-width: 90%;
+    margin: 40px auto;
+  }
+
+  .video-item .video-subscribe .video-btn {
+    margin: 0 auto;
+  }
+
+  .video-item .video-lines {
+    display: none;
   }
 }
 
@@ -1463,6 +1848,11 @@ html {
   .link {
     padding: 10px -30px 10px 30px;
   }
+
+  .video-item .video-subscribe .video-content__title {
+    font-size: 2rem;
+    width: 100%;
+  }
 }
 
 @media (max-width: 440px) {
@@ -1471,6 +1861,10 @@ html {
   }
 
   .services-block__number:after {
+    display: none;
+  }
+
+  .about-content__lines {
     display: none;
   }
 }
@@ -1520,3 +1914,7 @@ html {
 .webp .intro__back .intro__back-first { background-image: url(../img/back-1.webp); }
 
 .webp .intro__back .intro__back-second { background-image: url(../img/back-2.webp); }
+
+.webp .video { background-image: url(../img/video-back.webp); }
+
+.webp .footer { background-image: url(../img/footer-back.webp); }
