--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -102,35 +102,50 @@
 			color: $color-grey;
 		}
 	}
-	.burger__nav {
+	.burger__nav_popup{
 		position: absolute;
-		width: 300px;
-		height: 300px;
-		padding: 25px 25px;
-		display: flex;
-		flex-direction: column;
-		background-color: rgba(0, 0, 0, 0.9);
-		z-index: 2;
+		width: 100%;
+		height: 100vh;
+		left: 0;
+		top: 0;
 		display: none;
-		@media (max-width: 480px) {
-			width: 100%;
-			opacity: 1;
-		}
-		.nav__link {
-			text-transform: uppercase;
-			font-size: 2rem;
-			color: $color-grey;
-			margin: 25px 0;
-			&:hover {
-				color: $color-brown;
+
+		.burger__nav {
+			position: absolute;
+			width: 300px;
+			height: 300px;
+			padding: 25px 25px;
+			display: flex;
+			flex-direction: column;
+			background-color: rgba(0, 0, 0, 0.9);
+			z-index: 6;
+			top: 70px;
+			left: 27px;
+
+			@media (max-width: 480px) {
+				width: 100%;
+				opacity: 1;
+			}
+			.nav__link {
+				text-transform: uppercase;
+				font-size: 2rem;
+				color: $color-grey;
+				margin: 25px 0;
+				&:hover {
+					color: $color-brown;
+				}
 			}
 		}
 	}
+
+	.active-popup{
+		display: flex;
+	}
+	
 	// active-burger
 	.active-burger {
 		background-color: black;
 		opacity: 0.9;
-		display: flex;
 	}
 	.burger_wrapper.active-burger .burger__name {
 		color: $color-brown;
