--- a/#src/scss/services.scss
+++ b/#src/scss/services.scss
@@ -2,7 +2,7 @@
 	width: 100%;
 	padding-top: 260px;
 	margin-right: 30px;
-	margin-top: -130px;
+	margin-top: -200px;
 	overflow: hidden;
 }
 .services-block {
@@ -10,6 +10,9 @@
 	position: relative;
 	@media (max-width: 1040px) {
 		padding: 0 0 100px 0;
+	}
+	&:first-child{
+		padding-top: 75px;
 	}
 	&__f {
 		font-family: $font-ProximaBold;
@@ -20,6 +23,7 @@
 		position: absolute;
 		top: -300px;
 		left: calc(50% - 630px);
+		overflow: visible;
 		@media (max-width: 1040px) {
 			left: 100px;
 			top: -150px;
