--- a/#src/scss/sidebar.scss
+++ b/#src/scss/sidebar.scss
@@ -2,7 +2,7 @@
 	position: fixed;
 	top: 35%;
 	left: calc(50% - 42%);
-	z-index: 10;
+	z-index: 5;
 	@media (max-width: 1240px) {
 		left: 3%;
 	}
@@ -59,9 +59,10 @@
 		margin: 20px;
 		&:hover {
 			opacity: 0.8;
+			cursor: pointer;
 		}
-		.controls__item_active {
-			opacity: 1;
-		}
+	}
+	.controls__item_active {
+		opacity: 1;
 	}
 }
