--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -27,6 +27,7 @@ html {
 	font-family: 'ProximaNova-Regular';
 	font-weight: 400;
 	font-size: 15px;
+	scroll-behavior: smooth;
 }
 .icon {
 	width: 50px;
