--- a/Wooder/css/style.css
+++ b/Wooder/css/style.css
@@ -212,7 +212,16 @@ h6 {
   color: #888887;
 }
 
-.burger .burger__nav {
+.burger .burger__nav_popup {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  display: none;
+}
+
+.burger .burger__nav_popup .burger__nav {
   position: absolute;
   width: 300px;
   height: 300px;
@@ -225,27 +234,31 @@ h6 {
       -ms-flex-direction: column;
           flex-direction: column;
   background-color: rgba(0, 0, 0, 0.9);
-  z-index: 2;
-  display: none;
+  z-index: 6;
+  top: 70px;
+  left: 27px;
 }
 
-.burger .burger__nav .nav__link {
+.burger .burger__nav_popup .burger__nav .nav__link {
   text-transform: uppercase;
   font-size: 2rem;
   color: #888887;
   margin: 25px 0;
 }
 
-.burger .burger__nav .nav__link:hover {
+.burger .burger__nav_popup .burger__nav .nav__link:hover {
   color: #bea67c;
+}
+
+.burger .active-popup {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .burger .active-burger {
   background-color: black;
   opacity: 0.9;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .burger .burger_wrapper.active-burger .burger__name {
@@ -666,7 +679,7 @@ h6 {
   position: fixed;
   top: 35%;
   left: calc(50% - 42%);
-  z-index: 10;
+  z-index: 5;
 }
 
 .sidebar .sidebar_inner .sidebar__current {
@@ -720,9 +733,10 @@ h6 {
 
 .controls .controls__item:hover {
   opacity: 0.8;
+  cursor: pointer;
 }
 
-.controls .controls__item .controls__item_active {
+.controls .controls__item_active {
   opacity: 1;
 }
 
@@ -730,13 +744,17 @@ h6 {
   width: 100%;
   padding-top: 260px;
   margin-right: 30px;
-  margin-top: -130px;
+  margin-top: -200px;
   overflow: hidden;
 }
 
 .services-block {
   padding: 0 0 260px 0;
   position: relative;
+}
+
+.services-block:first-child {
+  padding-top: 75px;
 }
 
 .services-block__f {
@@ -748,6 +766,7 @@ h6 {
   position: absolute;
   top: -300px;
   left: calc(50% - 630px);
+  overflow: visible;
 }
 
 .services-block__f_reverse {
@@ -1003,6 +1022,7 @@ h6 {
 
 .videos {
   padding-bottom: 100px;
+  padding-top: 50px;
   overflow: hidden;
 }
 
@@ -1212,7 +1232,13 @@ h6 {
           align-items: center;
 }
 
-.video-item .video-subscribe .video-content__title {
+.video-item .video-subscribe .video-subscribe_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.video-item .video-subscribe .video-subscribe_wrapper .video-content__title {
   max-width: 510px;
   font-family: "ProximaNova-Bold";
   font-size: 3.2rem;
@@ -1222,7 +1248,7 @@ h6 {
   line-height: 4rem;
 }
 
-.video-item .video-subscribe .video-content__subtitle {
+.video-item .video-subscribe .video-subscribe_wrapper .video-content__subtitle {
   max-width: 405px;
   color: #ffff;
   line-height: 1.66rem;
@@ -1289,9 +1315,6 @@ h6 {
       -ms-flex-align: end;
           align-items: flex-end;
   margin-right: 20px;
-  -webkit-transform: translateY(-95px);
-      -ms-transform: translateY(-95px);
-          transform: translateY(-95px);
 }
 
 .video-item .video-lines .block-lines__title {
@@ -1310,6 +1333,10 @@ h6 {
 
 .video-item .video-watch video {
   width: 100%;
+}
+
+.video-item .video-show {
+  display: block;
 }
 
 .about {
@@ -1436,6 +1463,7 @@ html {
   font-family: 'ProximaNova-Regular';
   font-weight: 400;
   font-size: 15px;
+  scroll-behavior: smooth;
 }
 
 .icon {
@@ -1702,7 +1730,7 @@ html {
 }
 
 @media (max-width: 840px) {
-  .video-item .video-subscribe .video-content__title {
+  .video-item .video-subscribe .video-subscribe_wrapper .video-content__title {
     font-size: 2.5rem;
   }
 }
@@ -1805,12 +1833,12 @@ html {
     width: 100%;
   }
 
-  .video-item .video-subscribe .video-content {
+  .video-item .video-subscribe .video-subscribe_wrapper .video-content {
     text-align: center;
     margin-bottom: 100px;
   }
 
-  .video-item .video-subscribe .video-content__subtitle {
+  .video-item .video-subscribe .video-subscribe_wrapper .video-content__subtitle {
     text-align: center;
     max-width: 90%;
     margin: 40px auto;
@@ -1835,7 +1863,7 @@ html {
     padding: 0px;
   }
 
-  .burger .burger__nav {
+  .burger .burger__nav_popup .burger__nav {
     width: 100%;
     opacity: 1;
   }
@@ -1849,7 +1877,7 @@ html {
     padding: 10px -30px 10px 30px;
   }
 
-  .video-item .video-subscribe .video-content__title {
+  .video-item .video-subscribe .video-subscribe_wrapper .video-content__title {
     font-size: 2rem;
     width: 100%;
   }
@@ -1862,6 +1890,10 @@ html {
 
   .services-block__number:after {
     display: none;
+  }
+
+  .about .container-right {
+    padding: 0;
   }
 
   .about-content__lines {
