scroll to video

--- a/#src/scss/intro.scss
+++ b/#src/scss/intro.scss
@@ -4,7 +4,7 @@
 		position: absolute;
 		left: 0;
 		top: 0;
-		width: 60%;
+		width: 70vw;
 		height: 100vh;
 		background-image: url('../img/back-1.jpg');
 		z-index: -1;
@@ -17,7 +17,7 @@
 		position: absolute;
 		right: 0;
 		top: 0;
-		width: 45%;
+		width: 45vw;
 		height: 105vh;
 		background-image: url('../img/back-2.jpg');
 		z-index: -1;
