--- a/#src/scss/about.scss
+++ b/#src/scss/about.scss
@@ -1,6 +1,6 @@
 .about {
 	overflow: hidden;
-	.container-right{
+	.container-right {
 		@media (max-width: 440px) {
 			padding: 0;
 		}
@@ -37,7 +37,6 @@
 		}
 	}
 }
-
 .about-img {
 	position: relative;
 	&__overlay {
@@ -60,6 +59,10 @@
 		@media (max-width: 1300px) {
 			width: 400px;
 		}
+		@media (max-width: 440px) {
+			width: 100%;
+			padding: 0 5px;
+		}
 	}
 }
 .about-content {
@@ -72,6 +75,9 @@
 	@media (max-width: 1005px) {
 		margin: 30px 0 0 0;
 		align-self: flex-end;
+	}
+	@media (max-width: 440px) {
+		align-self: center;
 	}
 	&__lines {
 		display: flex;
