--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,40 +1,44 @@
 .footer {
-    background-image: url(../img/footer-back.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    &__inner {
-        display: flex;
-        justify-content: space-between;
-        Align-items: center;
-        flex-wrap: wrap;
-        padding: 20px 0;
-    } 
+	background-image: url(../img/footer-back.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	&__inner {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		flex-wrap: wrap;
+		padding: 20px 0;
+	}
 }
 
 .footer-date {
-    color: $color-white;
-    opacity: .2;
-    text-transform: uppercase;
-    @media (max-width: 700px) {
-        display: none;
-    }
+	color: $color-white;
+	opacity: 0.2;
+	text-transform: uppercase;
+	@media (max-width: 700px) {
+		display: none;
+	}
 }
 .footer-logo {
-    font-size: 2rem;
-    @media (max-width: 700px) {
-        width: 100%;
-        text-align: center ;
-    }
+	font-size: 2rem;
+	@media (max-width: 700px) {
+		width: 100%;
+		text-align: center;
+	}
 }
 .footer-author {
     color: $color-white;
-    opacity: .4;
-    span{
-        opacity: .3;
-    }
-    @media (max-width: 700px) {
-        width: 100%;
-        text-align: center ;
-        margin-top: 10px;
-    }
+	opacity: 0.4;
+	a {
+		color: $color-white;
+		opacity: 0.7;
+	}
+	span {
+		opacity: 0.3;
+	}
+	@media (max-width: 700px) {
+		width: 100%;
+		text-align: center;
+		margin-top: 10px;
+	}
 }
