--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -20,6 +20,7 @@
 		}
 		.header__burger {
 			width: 90px;
+			z-index: 6;
 		}
 		.header__navigation {
 			transform: translateX(10%);
@@ -63,6 +64,7 @@
 		display: flex;
 		align-items: center;
 		padding: 20px 120px 20px 20px;
+		z-index: 1;
 		@media (max-width: 380px) {
 			padding-left: 10px;
 		}
@@ -76,6 +78,7 @@
 		.burger__icon {
 			margin-right: 12px;
 			height: 40px;
+			z-index: -1;
 			span {
 				width: 33px;
 				height: 1px;
@@ -100,29 +103,33 @@
 			font-family: $font-ProximaBold;
 			text-transform: uppercase;
 			color: $color-grey;
+			z-index: -1;
 		}
 	}
-	.burger__nav_popup{
+	.burger__nav_popup {
 		position: absolute;
 		width: 100%;
 		height: 100vh;
 		left: 0;
 		top: 0;
 		display: none;
-
+		z-index: -2;
 		.burger__nav {
 			position: absolute;
-			width: 300px;
-			height: 300px;
-			padding: 25px 25px;
+			width: 25%;
+			height: 99vh;
+			padding: 100px 25px 25px 50px;
 			display: flex;
 			flex-direction: column;
 			background-color: rgba(0, 0, 0, 0.9);
-			z-index: 6;
-			top: 70px;
-			left: 27px;
-
-			@media (max-width: 480px) {
+			top: -1vh;
+			@media (max-width: 1240px) {
+				width: 35%;
+			}
+			@media (max-width: 768px) {
+				width: 45%;
+			}
+			@media (max-width: 768px) {
 				width: 100%;
 				opacity: 1;
 			}
@@ -138,14 +145,13 @@
 		}
 	}
 
-	.active-popup{
+	.active-popup {
 		display: flex;
 	}
-	
 	// active-burger
 	.active-burger {
 		background-color: black;
-		opacity: 0.9;
+		opacity: 1;
 	}
 	.burger_wrapper.active-burger .burger__name {
 		color: $color-brown;
@@ -199,6 +205,7 @@
 		display: none;
 	}
 	.lang_wrapper {
+		position: relative;
 		display: flex;
 		justify-content: space-between;
 		.lang__info {
@@ -210,9 +217,33 @@
 					cursor: pointer;
 				}
 			}
+			&-block {
+				color: $color-black;
+				font-size: 0.8rem;
+				position: absolute;
+				width: 150px;
+				right: 20px;
+				top: 50px;
+				line-height: 1.3rem;
+				letter-spacing: 0.01rem;
+				background-color: $color-brown;
+				padding: 0 10px;
+				opacity: 0.7;
+				display: none;
+				border-radius: 5px;
+			}
+			&:hover .lang__info-block {
+				display: block;
+			}
+			.active-btn {
+				fill: $color-brown;
+			}
 		}
 		.lang__switcher {
 			display: flex;
+		}
+		.show-info {
+			display: block;
 		}
 	}
 }
@@ -232,8 +263,8 @@
 		display: none;
 		flex-direction: column;
 		align-items: center;
-		top: 60px;
-		right: 16px;
+		top: 40px;
+		right: -10px;
 		.switcher__item {
 			font-family: $font-ProximaBold;
 			color: $color-grey;
